# dff_baseline_search_qc_app

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
base_qc_app/: app.py  data.py  runs.py  runs_panel.py
baseline_search/: __init__.py  recipe.py  refit_from5s.py  registry.py  resolve.py  run.py
baseline_search/recipes/: cpos2_cneg3_lowess.json  cpos2_cneg4_lowess.json  cpos2_cneg5_lowess.json  cpos3_cneg3_lowess.json  cpos3_cneg4_lowess.json  cpos3_cneg5_lowess.json  cpos4_cneg4_lowess.json  cpos4_cneg5_lowess.json  first_try.json  percentile_variant.json
baseline_search/recipes/binit0/: binit0_c23.json  binit0_c24.json  binit0_c25.json  binit0_c33.json  binit0_c34.json  binit0_c35.json  binit0_c44.json  binit0_c45.json  cpos2_cneg3_lowess_binit0.json  cpos2_cneg4_lowess_binit0.json  cpos2_cneg5_lowess_binit0.json  cpos3_cneg3_lowess_binit0.json  cpos3_cneg4_lowess_binit0.json  cpos3_cneg5_lowess_binit0.json  cpos4_cneg4_lowess_binit0.json  cpos4_cneg5_lowess_binit0.json
baseline_search/recipes/binit0_v2/: binit0_v2_c23.json  binit0_v2_c24.json  binit0_v2_c25.json  binit0_v2_c33.json  binit0_v2_c34.json  binit0_v2_c35.json  binit0_v2_c44.json  binit0_v2_c45.json
baseline_search/recipes/binit0_v3/: binit0_v3_c23.json  binit0_v3_c24.json  binit0_v3_c25.json  binit0_v3_c33.json  binit0_v3_c34.json  binit0_v3_c35.json  binit0_v3_c44.json  binit0_v3_c45.json
baseline_search/recipes/binitmax/: cpos2_cneg3_binitmax.json  cpos2_cneg4_binitmax.json  cpos2_cneg5_binitmax.json  cpos3_cneg3_binitmax.json  cpos3_cneg3_percentile_binitmax.json  cpos3_cneg4_binitmax.json  cpos3_cneg5_binitmax.json  cpos4_cneg4_binitmax.json  cpos4_cneg5_binitmax.json
binit0_qc_app/: app.py  curation.py  data.py  main.py  rois.py  select_panel.py
production_qc_app/: __init__.py  app.py  curation.py  data.py  main.py  rois.py
qc_app/: app.py  curation.py  data.py  rois.py  runs_panel.py
