[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dff-baseline-search-app"
version = "0.2.0"
description = "Recipe-driven baseline fitting + PyQt5/pyqtgraph QC app for dFF curation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15",
    "pyqtgraph>=0.13",
    "numpy>=1.25",
    "pandas>=1.5",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "joblib>=1.3",
]

[project.scripts]
dff-qc      = "base_qc_app.app:run"
dff-fit     = "baseline_search.run:main"
binit0-qc   = "binit0_qc_app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["base_qc_app*", "baseline_search*", "binit0_qc_app*"]
